// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressBar snapshots matches snapshot at 0% 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="flex-1 relative"
    >
      <div
        aria-label="Funding progress: 0%"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="w-full bg-[var(--color-surface-elevated)] rounded-full h-2 relative overflow-hidden"
        role="progressbar"
      >
        <div
          class="h-2 rounded-full transition-all duration-500"
          style="width: 0%; background: var(--color-brand);"
        />
        <div
          class="absolute right-0 top-0 h-full w-0.5 bg-[var(--color-border-subtle)] opacity-50"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="text-sm font-medium min-w-[3rem] text-right"
      style="color: var(--color-brand);"
    >
      0%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar snapshots matches snapshot at 50% 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="flex-1 relative"
    >
      <div
        aria-label="Funding progress: 50%"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="w-full bg-[var(--color-surface-elevated)] rounded-full h-2 relative overflow-hidden"
        role="progressbar"
      >
        <div
          class="h-2 rounded-full transition-all duration-500"
          style="width: 50%; background: var(--color-brand);"
        />
        <div
          class="absolute right-0 top-0 h-full w-0.5 bg-[var(--color-border-subtle)] opacity-50"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="text-sm font-medium min-w-[3rem] text-right"
      style="color: var(--color-brand);"
    >
      50%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar snapshots matches snapshot at 100% 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="flex-1 relative"
    >
      <div
        aria-label="Funding progress: 100%"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="w-full bg-[var(--color-surface-elevated)] rounded-full h-2 relative overflow-hidden"
        role="progressbar"
      >
        <div
          class="h-2 rounded-full transition-all duration-500"
          style="width: 100%; background: var(--color-success);"
        />
        <div
          class="absolute right-0 top-0 h-full w-0.5 bg-[var(--color-border-subtle)] opacity-50"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="text-sm font-medium min-w-[3rem] text-right"
      style="color: var(--color-success);"
    >
      100%
    </span>
  </div>
</DocumentFragment>
`;
